# cmake_cpp_subprojects

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: TestClass.hpp
app/src/: TestClass.cpp  main.cpp
libs/: CMakeLists.txt
libs/libA/: CMakeLists.txt
libs/libA/include/: LibClassA.hpp
libs/libA/src/: LibClassA.cpp
libs/libA/src/PrivClass/: LibAPrivClass.cpp  LibAPrivClass.hpp
libs/libB/: CMakeLists.txt
libs/libB/include/: LibClassB.hpp
libs/libB/src/: LibClassB.cpp
